deployment/environments/production/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: twocan-production
  annotations:
    kapp.k14s.io/delete-strategy: orphan
